# diplomamunka

./: .clang-format  .gitignore  CMakeLists.txt  Game.cpp  Game.h  MessageType.h  NamedPipeReader.cpp  NamedPipeReader.h  NamedPipeWriter.cpp  NamedPipeWriter.h  Player.cpp  Player.h  Projectile.h  README.md  Server.cpp  Server.h  UDPReader.cpp  UDPReader.h  UDPWriter.cpp  UDPWriter.h  macros.h  main.cpp  uudp.h
Assets/: Buffer.cpp  Buffer.h  MessageType.h  NetworkHostConversion.cpp  NetworkHostConversion.h  Player.cpp  Player.h
CppServer/: CMakeLists.txt  README.md  Server.cpp  Server.h  main.cpp
CppServer/Assets/: Buffer.cpp  Buffer.h  MessageType.h  NetworkHostConversion.cpp  NetworkHostConversion.h  Player.cpp  Player.h
CppServer/NamedPipes/: NamedPipeReader.cpp  NamedPipeReader.h  NamedPipeWriter.cpp  NamedPipeWriter.h
CppServer/UDP/: UDPReader.cpp  UDPReader.h  UDPWriter.cpp  UDPWriter.h
NamedPipes/: NamedPipeReader.cpp  NamedPipeReader.h  NamedPipeWriter.cpp  NamedPipeWriter.h
UDP/: UDPReader.cpp  UDPReader.h  UDPWriter.cpp  UDPWriter.h
UnityGame/: README.md
UnityGame/Assets/Prefabs/Camera/: Large Camera.prefab
UnityGame/Assets/Prefabs/Cpp/: Enemy_StraightProjectile 1_0 Client.prefab  Enemy_StraightProjectile 1_0 Server.prefab  PlayerMultiplayerClient.prefab  PlayerMultiplayerClientAI.prefab  PlayerMultiplayerClientOthers.prefab  PlayerMultiplayerServer.prefab  Player_ProjectileClient.prefab  Player_ProjectileServer.prefab  Player_Rocket_ProjectileClient.prefab  Player_Rocket_ProjectileServer.prefab
UnityGame/Assets/Scenes/: Level1.unity  Level2.unity  Level3.unity  LevelMultiplayerClient.unity  LevelMultiplayerServer.unity  LevelUnityMultiplayer.unity  MainMenu.unity
UnityGame/Builds/Windows/: response_times_20250518130629_15,97792.txt  response_times_20250518130632_19,10768.txt  response_times_20250518130712_6,390433.txt  response_times_20250518130716_10,6595.txt  response_times_20250518130721_15,78167.txt  response_times_20250518143619_46,45633.txt
UnityGame/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
(+156 files in other folders)
